5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1602_1016.log
== TEST (2019-03-27 10:55:46) 
-- CODE:
base = float(input("numero:"))
altura = float(input("numero:"))

-- OUTPUT:
346
2
173
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:00:58) 
-- CODE:
from math import *
base = float(input("numero:"))
altura = float(input("numero:"))
Area_triagulo = mar

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Area_triagulo = mar
NameError: name 'mar' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:05:46) 
-- CODE:
from math import *
a = float(input("numero:"))  
b = float(input("numero:"))
c = float(input("numero:"))
Area_triagulo = math.sqrt(s * (s-a) * (s-b) * (s-c))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area_triagulo = math.sqrt(s * (s-a) * (s-b) * (s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:06:40) 
-- CODE:
from math import *
a = float(input("numero:"))  
b = float(input("numero:"))
c = float(input("numero:"))
Area_triangulo = math.sqrt(s * (s-a) * (s-b) * (s-c))
print(round(Area_triangulo, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area_triangulo = math.sqrt(s * (s-a) * (s-b) * (s-c))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:07:35) 
-- CODE:
from math import *
a = float(input("numero:"))  
b = float(input("numero:"))
c = float(input("numero:"))
Area_triangulo = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(Area_triangulo, 5))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    Area_triangulo = sqrt(s * (s-a) * (s-b) * (s-c))
NameError: name 's' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 11:11:58) 
-- CODE:
from math import *
a = float(input("numero:"))  
b = float(input("numero:"))
c = float(input("numero:"))
s = (a+b+c)/2
Area_triangulo = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(Area_triangulo, 5))

-- OUTPUT:
69.41967
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 11:12:48) 
-- CODE:
from math import *
a = float(input("numero:"))  
b = float(input("numero:"))
c = float(input("numero:"))
s = (a+b+c)/2
Area_triangulo = sqrt(s * (s-a) * (s-b) * (s-c))
print(round(Area_triangulo, 5))

-- EXECUTION TIME:
0.213924
-- TEST CASE 1:
---- input:
11.0
19.5
13.2
---- correct output:
69.41967
---- user output:
69.41967
-- TEST CASE 2:
---- input:
30.0
40.0
50.0
---- correct output:
600.0
---- user output:
600.0
-- TEST CASE 3:
---- input:
33.0
43.0
55.0
---- correct output:
709.16654
---- user output:
709.16654
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
